Added changes to config.ini

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -1419,8 +1419,8 @@ suricata.flow.end=db.suricata.flow.end;group:suricata;kind:termfield;friendly:FL
 
 #Suricata TLS Specific Fields
 suricata.tls.version=db.suricata.tls.version;group:suricata;kind:termfield;friendly:TLS_VRSN;help:Suricata TLS Version
-# suricata.tls.server.ja3s=db.suricata.tls.server.ja3s ###THESE ARE DICT OBJECTS? Dont map for now
-# suricata.tls.client.ja3=db.suricata.client.ja3 ###THESE ARE DICT OBJECTS? Dont map for now
+suricata.tls.server.ja3s=db.suricata.tls.server.ja3s;group:suricata;kind:integer;friendly:TLS_S_JA3S;help:Suricata TLS Server JA3S
+suricata.tls.client.ja3=db.suricata.client.ja3;group:suricata;kind:integer;friendly:TLS_C_JA3S;help:Suricata TLS Client JA3S
 suricata.tls.notafter=db.suricata.tls.notafter;group:suricata;kind:termfield;friendly:TLS_NOTAFTR;help:Suricata TLS Not After Timestamp
 suricata.tls.notbefore=db.suricata.tls.notbefore;group:suricata;kind:termfield;friendly:TLS_NOTBFRE;help:Suricata TLS Not Before Timestamp
 suricata.tls.serial=db.suricata.tls.serial;group:suricata;kind:termfield;friendly:TLS_SERL;help:Suricata TLS Serial
@@ -1448,8 +1448,8 @@ suricata.smb.command=db.suricata.smb.command;group:suricata;kind:termfield;frien
 suricata.smb.session_id=db.suricata.smb.session_id;group:suricata;kind:integer;friendly:SMB_SESS_ID;help:Suricata SMB Session ID
 
 #Suricata SSH Specific Fields
-#suricata.ssh.server=db.suricata.ssh.server;group:suricata;kind:  ### This is an object type, don't map yet
-#suricata.ssh.client=db.suricata.ssh.client;group:suricata;kind:  ### This is an object type, don't map yet
+suricata.ssh.server=db.suricata.ssh.server;group:suricata;kind:integer;friendly:SSH_S;help:Suricata SSH Server
+suricata.ssh.client=db.suricata.ssh.client;group:suricata;kind:integer;friendly:SSH_C;help:Suricata SSH Client
 suricata.ssh.server.proto_version=db.suricata.server.proto_version;group:suricata;kind:termfield;friendly:SSH_S_PRTO_VER;help:Suricata SSH Server Protocol Version
 suricata.ssh.server.software_version=db.suricata.server.software_version;group:suricata;kind:termfield;friendly:SSH_S_SW_VER;help:Suricata SSH Server Software Version
 suricata.ssh.client.proto_version=db.suricata.client.proto_version;group:suricata;kind:termfield;friendly:SSH_C_PRTO_VER;help:Suricata SSH Client Protocol Version
