all changes done

--- a/arkime/etc/config.ini
+++ b/arkime/etc/config.ini
@@ -1435,7 +1435,7 @@ suricata.fileinfo.gaps=db.suricata.fileinfo.gaps;group:suricata;kind:termfield;f
 file.size=db.file.size;group:malcolm;kind:termfield;friendly:FINFOSIZE;help:Suricata Fileinfo Size
 suricata.fileinfo.stored=db.suricata.fileinfo.stored;group:suricata;kind:integer;friendly:FINFOSTORE;help:Suricata Fileinfo Store ###This field is boolean, may not work
 suricata.fileinfo.tx_id=db.suricata.fileinfo.tx_id;group:suricata;kind:integer;friendly:FINFOTXID;help:Suricata Fileinfo TX ID
-file.uid=db.file.uid;group:malcolm;kind:integer;friendly:FILEUID;help:Suricata File UID #ARRAY TYPE, DONT MAP FOR NOW.
+file.uid=db.file.uid;group:malcolm;kind:integer;friendly:FILEUID;help:Suricata File UID;friendly:FILE_UID;help: Suricata File UID
 suricata.fileinfo.filename=db.suricata.fileinfo.filename;group:suricata;kind:termfield;friendly:FINFONAME;help:Suricata Fileinfo Name
 
 #Suricata SMB Specific Fields
@@ -1484,7 +1484,7 @@ suricata.files[].tx_id=db.suricata.files[].tx_id;group:suricata;kind:integer;fri
 suricata.files[].filename=db.suricata.files[].filename;group:suricata;kind:termfield;friendly:FI_FNAME;help:Suricata Files Filename
 suricata.files[].state=db.suricata.files[].state;group:suricata;kind:integer;termfield:FI_STATE;help:Suricata Files State
 suricata.files[].gaps=db.suricata.files[].gaps;group:suricata;kind:integer;integer:FI_GAPS;help:Suricata Files Gaps  ##Boolean
-suricata.files[].sid=db.suricata.files[].sid;group:suricata;kind:integer;integer:FI_SID;help:Suricata Files SID ##ARRAY, needs fixing
+suricata.files[].sid=db.suricata.files[].sid;group:suricata;kind:integer;friendly:FI_SID;help:Suricata Files SID ##ARRAY, needs fixing
 suricata.files[].size=db.suricata.files[].size;group:suricata;kind:integer;friendly:FI_SIZE;help:Suricata Files Size
 suricata.files[].stored=db.suricata.files[].stored;group:suricata;kind:integer;friendly:FI_STORED;help:Suricata Files Stored ##Boolean
 
