more suricata config

--- a/sensor-iso/interface/sensor_ctl/control_vars.conf
+++ b/sensor-iso/interface/sensor_ctl/control_vars.conf
@@ -73,7 +73,11 @@ export SURICATA_AF_PACKET_USE_MMAP=yes
 export SURICATA_CAPTURE_CHECKSUM_VALIDATION=none
 export SURICATA_CAPTURE_DISABLE_OFFLOADING=true
 export SURICATA_RULES_DIR=/etc/suricata/rules
-export SURICATA_MANAGED_RULES_DIR=/var/lib/suricata/rules
+export SURICATA_CUSTOM_RULES_DIR="$SURICATA_RULES_DIR"/custom
+export SURICATA_MANAGED_DIR=/var/lib/suricata
+export SURICATA_MANAGED_RULES_DIR="$SURICATA_MANAGED_DIR"/rules
+export SURICATA_REFRESH_CRON_EXPRESSION="15 2 * * *"
+export SURICATA_REFRESH_ETOPEN=true
 
 # affects Arkime only for now: beats values are stored in keystores per-beat
 export OS_PROTOCOL=https
