--- a/sensor-iso/interface/sensor_ctl/supervisor.d/suricata.conf
+++ b/sensor-iso/interface/sensor_ctl/supervisor.d/suricata.conf
@@ -1,22 +1,4 @@
-[group:suricata]
-programs=suricata-service,suricata-updates
-
-[program:suricata-updates]
-command=/usr/bin/suricata-update
-  -v
-  -D /var/lib/suricata
-  --etopen
-  --local "$(SURICATA_RULES_DIR)s/custom"
-  --reload-command='kill -USR2 $(pidof suricata)'
-user=sensor
-autostart=%(ENV_AUTOSTART_SURICATA_UPDATES)s
-autorestart=true
-startsecs=0
-startretries=0
-stopasgroup=true
-killasgroup=true
-
-[program:suricata-service]
+[program:suricata]
 command=/usr/bin/suricata
   -v
   -c /opt/sensor/sensor_ctl/suricata/suricata.yaml
