Add Suricata Health Check

--- a/suricata/supervisord.conf
+++ b/suricata/supervisord.conf
@@ -1,3 +1,8 @@
+
+[unix_http_server]
+file=/tmp/supervisor.sock   ; (the path to the socket file)
+chmod=0700
+
 [supervisord]
 nodaemon=true
 logfile=/dev/null
