--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -148,6 +148,8 @@ services:
     stdin_open: false
     tty: true
     hostname: opensearch
+    networks:
+      - default
     environment:
       << : *process-variables
       logger.level : 'INFO'
@@ -189,6 +191,8 @@ services:
     stdin_open: false
     tty: true
     hostname: dashboards-helper
+    networks:
+      - default
     environment:
       << : *process-variables
       << : *dashboards-helper-variables
@@ -220,6 +224,8 @@ services:
     stdin_open: false
     tty: true
     hostname: dashboards
+    networks:
+      - default
     environment:
       << : *process-variables
       OPENSEARCH_URL : 'http://opensearch:9200'
@@ -244,6 +250,8 @@ services:
     stdin_open: false
     tty: true
     hostname: logstash
+    networks:
+      - default
     ulimits:
       memlock:
         soft: -1
@@ -290,6 +298,8 @@ services:
     stdin_open: false
     tty: true
     hostname: filebeat
+    networks:
+      - default
     environment:
       << : *process-variables
       << : *nginx-variables
@@ -331,6 +341,8 @@ services:
     stdin_open: false
     tty: true
     hostname: arkime
+    networks:
+      - default
     env_file:
       - ./auth.env
     environment:
@@ -375,6 +387,8 @@ services:
     stdin_open: false
     tty: true
     hostname: zeek
+    networks:
+      - default
     environment:
       << : *process-variables
       << : *common-upload-variables
@@ -408,6 +422,8 @@ services:
     stdin_open: false
     tty: true
     hostname: file-monitor
+    networks:
+      - default
     environment:
       << : *process-variables
       << : *zeek-variables
@@ -457,6 +473,8 @@ services:
     stdin_open: false
     tty: true
     hostname: pcapmon
+    networks:
+      - default
     environment:
       << : *process-variables
       << : *common-upload-variables
@@ -483,6 +501,8 @@ services:
     stdin_open: false
     tty: true
     hostname: upload
+    networks:
+      - default
     env_file:
       - ./auth.env
     environment:
@@ -512,6 +532,8 @@ services:
     stdin_open: false
     tty: true
     hostname: htadmin
+    networks:
+      - default
     environment:
       << : *process-variables
       << : *auth-variables
@@ -537,6 +559,8 @@ services:
     stdin_open: false
     tty: true
     hostname: freq
+    networks:
+      - default
     environment:
       << : *process-variables
       << : *common-lookup-variables
@@ -558,6 +582,8 @@ services:
     stdin_open: false
     tty: true
     hostname: name-map-ui
+    networks:
+      - default
     environment:
       << : *process-variables
       VIRTUAL_HOST : 'name-map-ui.malcolm.local'
@@ -583,6 +609,8 @@ services:
     stdin_open: false
     tty: true
     hostname: api
+    networks:
+      - default
     environment:
       << : *process-variables
       VIRTUAL_HOST : 'api.malcolm.local'
@@ -603,6 +631,8 @@ services:
     stdin_open: false
     tty: true
     hostname: nginx-proxy
+    networks:
+      - default
     environment:
       << : *process-variables
       << : *auth-variables
@@ -634,7 +664,16 @@ services:
       timeout: 15s
       retries: 3
       start_period: 120s
+    #labels:
+    #  - "traefik.enable=true"
+    #  - "traefik.http.routers.malcolm.rule=Host(`malcolm.example.org`)"
+    #  - "traefik.http.routers.malcolm.entrypoints=websecure"
+    #  - "traefik.http.routers.malcolm.tls.certresolver=myresolver"
+    #  - "traefik.http.services.malcolm.loadbalancer.server.port=443"
 
 # shared named volume so filebeat can access nginx access logs
 volumes:
   nginx-log-path:
+
+networks:
+  default:
