ficed the mapping of global fields in suricata within suricata pipeline in logstash

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -105,9 +105,18 @@ filter {
                         rename => [ "dest_ip", "destination.ip" ]
                         rename => [ "src_port", "source.port" ]
                         rename => [ "dest_port", "destination.port" ]
-                        rename => [ "timestamp", "@timestamp" ]
-                        rename => [ "event_type", "event.type" ]
-                        rename => [ "proto", "network.transport" ]  
+                        rename => [ "timestamp", "suricata.timestamp" ]
+                        rename => [ "event_type", "suricata.event_type" ]
+                        rename => [ "proto", "suricata.proto" ] 
+                        rename => [ "flow_id", "suricata.flow_id" ]
+                        rename => [ "ix_id", "suricata.ix_id" ]
+                        rename => [ "pcap_cnt", "suricata.pcap_cnt" ]
+                        rename => [ "icmp_code", "suricata.icmp_code" ]
+                        rename => [ "icmp_type", "suricata.icmp_type" ]
+                        rename => [ "response_icmp_code", "suricata.response_icmp_code" ]
+                        rename => [ "response_icmp_type", "suricata.response_icmp_type" ]
+                        rename => [ "app_proto_ts", "suricata.app_proto_ts" ]
+                        rename => [ "app_proto_tc", "suricata.app_proto_tc" ]
                 }
 
                 ###
