Edited config files

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -117,6 +117,7 @@ filter {
                         rename => [ "response_icmp_type", "suricata.response_icmp_type" ]
                         rename => [ "app_proto_ts", "suricata.app_proto_ts" ]
                         rename => [ "app_proto_tc", "suricata.app_proto_tc" ]
+                        rename => [ "app_proto", "network.protocol" ]
                 }
 
                 ###
