unmapped tls.server.ja3s and tls.client.ja3 because of excpetions

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -152,8 +152,10 @@ filter {
                 mutate { 
                         id => "mutate_rename_suricata_tls_log_type"
                         rename => { "[suricata][tls][version]" => "[tls][version]"}
-                        rename => { "[suricata][tls][ja3s]" => "[tls][server][ja3s]"}
-                        rename => { "[suricata][tls][ja3]" => "[tls][client][ja3]"}
+                        # rename => { "[suricata][tls][ja3s]" => "[tls][server][ja3s]"}
+                        # rename => { "[suricata][tls][ja3]" => "[tls][client][ja3]"}
+                        rename => { "[suricata][tls][ja3s]" => "[tls][ja3s]"}
+                        rename => { "[suricata][tls][ja3]" => "[tls][ja3]"}
                 }
 
                 #Specific fileinfo renaming
