remove empty object types of tls.server/client.ja3

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -152,10 +152,22 @@ filter {
                 mutate { 
                         id => "mutate_rename_suricata_tls_log_type"
                         rename => { "[suricata][tls][version]" => "[tls][version]"}
-                        # rename => { "[suricata][tls][ja3s]" => "[tls][server][ja3s]"}
-                        # rename => { "[suricata][tls][ja3]" => "[tls][client][ja3]"}
-                        rename => { "[suricata][tls][ja3s]" => "[tls][ja3s]"}
-                        rename => { "[suricata][tls][ja3]" => "[tls][ja3]"}
+                        rename => { "[suricata][tls][ja3s]" => "[tls][server][ja3s]"}
+                        rename => { "[suricata][tls][ja3]" => "[tls][client][ja3]"}
+                }
+
+                if ([tls][client][ja3] == "{}") {
+                        mutate { 
+                                id => "mutate_remove_field_tls_client_ja3_suricata"
+                                remove_field => [ "[tls][client][ja3]" ] 
+                        }
+                }
+
+                if ([tls][server][ja3s] == "{}") {
+                        mutate { 
+                                id => "mutate_remove_field_tls_server_ja33_suricata"
+                                remove_field => [ "[tls][server][ja3s]" ] 
+                        }
                 }
 
                 #Specific fileinfo renaming
