--- a/filebeat/filebeat.yml
+++ b/filebeat/filebeat.yml
@@ -52,22 +52,21 @@ filebeat.inputs:
 
 - type: log
   paths:
-    - ${FILEBEAT_SURICATA_LOG_PATH:/data/suricata}/eve_*.json 
+    - ${FILEBEAT_SURICATA_LOG_PATH:/data/suricata}/eve_*.json
   symlinks: true
   fields_under_root: true
   tags: ["_filebeat_suricata"]
   fields:
     type: "session"
   compression_level: 0
-  # exclude_lines: ['^\s*#']
   scan_frequency: ${FILEBEAT_SCAN_FREQUENCY:10s}
-  clean_inactive: 200m
-  ignore_older: 180m
-  close_inactive: 120m
-  close_renamed: false
-  close_removed: true
-  close_eof: false
-  clean_removed: true
+  clean_inactive: ${FILEBEAT_CLEAN_INACTIVE:45m}
+  ignore_older: ${FILEBEAT_IGNORE_OLDER:30m}
+  close_inactive: ${FILEBEAT_CLOSE_INACTIVE:30s}
+  close_renamed: ${FILEBEAT_CLOSE_RENAMED:true}
+  close_removed: ${FILEBEAT_CLOSE_REMOVED:true}
+  close_eof: ${FILEBEAT_CLOSE_EOF:true}
+  clean_removed: ${FILEBEAT_CLEAN_REMOVED:true}
 
 output.logstash:
   hosts: ["logstash:5044"]
