--- a/suricata/supervisord.conf
+++ b/suricata/supervisord.conf
@@ -23,10 +23,9 @@ command=python3 /opt/pcap_suricata_processor.py
   --threads %(ENV_SURICATA_AUTO_ANALYZE_PCAP_THREADS)s
   --publisher "%(ENV_PCAP_MONITOR_HOST)s"
   --pcap-directory /data/pcap/processed
-  --suricata /opt/suricata/src/suricata
+  --suricata /usr/bin/suricata
   --autotag "%(ENV_AUTO_TAG)s"
   --autosuricata "%(ENV_SURICATA_AUTO_ANALYZE_PCAP_FILES)s"
-  #--suricata-directory /suricata/upload
 startsecs=15
 startretries=1
 stopasgroup=true
