suricata log parsing work in progress

--- a/logstash/pipelines/suricata/11_suricata_logs.conf
+++ b/logstash/pipelines/suricata/11_suricata_logs.conf
@@ -1,205 +1,117 @@
 filter {
-        # If message looks like json, try to parse it as such. Otherwise, fall back to csv or grok.
-        if [message] =~ /^{.*}$/ {
 
-                # I don't know if we actually need this
-                json {
-                        source => "message"
-                }
+    # If message looks like json, try to parse it as such. Otherwise, drop it like it's hot.
+    if [message] =~ /^{.*}$/ {
 
-                ###
-                #
-                # This section will be for Appending "[suricata]" to the
-                # beggining of field names.  We will map them to ECS later in this script
-                #
-                ###
+        json { id => "json_parse_suricata"
+               source => "message"
+               target => "suricata" }
 
-                #General Alert renaming
-                mutate { 
-                        id => "mutate_rename_general_suricata_alert_log_type"
-                        rename => { "[alert]" => "[suricata][alert]" }
-                }
+        mutate { id => "mutate_remove_field_suricata_message_and_stats"
+                 remove_field => [ "[message]",
+                                   "[suricata][stats]" ] }
 
-                #General anomaly specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_anomaly_log_type"
-                        rename => { "[anomaly]" => "[suricata][anomaly]" }
-                }
-
-                #General http specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_https_log_type"
-                        rename => { "[http]" => "[suricata][http]" }
-                }
-
-                #General dns specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_dns_log_type"
-                        rename => { "[dns]" => "[suricata][dns]" }
-                }
-
-                #General flow specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_flow_log_type"
-                        rename => { "[flow]" => "[suricata][flow]" }
-                }
-
-                #General tls specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_tls_log_type"
-                        rename => { "[tls]" => "[suricata][tls]" }
-                }
-
-                #General fileinfo specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_fileinfo_log_type"
-                        rename => { "[fileinfo]" => "[suricata][fileinfo]" }
-                }
-
-                #General smb specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_smb_log_type"
-                        rename => { "[smb]" => "[suricata][smb]" }
-                }
-
-                #General ssh specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_ssh_log_type"
-                        rename => { "[ssh]" => "[suricata][ssh]" }
-                }
-
-                #General ftp specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_ftp_log_type"
-                        rename => { "[ftp]" => "[suricata][ftp]" }
-                }
-
-                #General metadata specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_metadata_log_type"
-                        rename => { "[metadata]" => "[suricata][metadata]" }
-                }
-
-                #FIXME
-                #General files specific fields
-                # mutate { 
-                #         id => "mutate_rename_general_suricata_files_log_type"
-                #         rename => { "[files]" => "[suricata][files]" }
-                # }
-
-                #General tcp specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_tcp_log_type"
-                        rename => { "[tcp]" => "[suricata][tcp]" }
-                }
-
-                #General stats specific fields
-                mutate { 
-                        id => "mutate_rename_general_suricata_stats_log_type"
-                        rename => { "[stats]" => "[suricata][stats]" }
-                }
-
-                #Renaming the global fields of every Suricata event type
-                mutate {
-                        rename => [ "src_ip", "source.ip" ]
-                        rename => [ "dest_ip", "destination.ip" ]
-                        rename => [ "src_port", "source.port" ]
-                        rename => [ "dest_port", "destination.port" ]
-                        rename => [ "timestamp", "suricata.timestamp" ]
-                        rename => [ "event_type", "suricata.event_type" ]
-                        rename => [ "proto", "suricata.proto" ] 
-                        rename => [ "flow_id", "suricata.flow_id" ]
-                        rename => [ "ix_id", "suricata.ix_id" ]
-                        rename => [ "pcap_cnt", "suricata.pcap_cnt" ]
-                        rename => [ "icmp_code", "suricata.icmp_code" ]
-                        rename => [ "icmp_type", "suricata.icmp_type" ]
-                        rename => [ "response_icmp_code", "suricata.response_icmp_code" ]
-                        rename => [ "response_icmp_type", "suricata.response_icmp_type" ]
-                        rename => [ "app_proto_ts", "suricata.app_proto_ts" ]
-                        rename => [ "app_proto_tc", "suricata.app_proto_tc" ]
-                        rename => [ "app_proto", "network.protocol" ]
-                }
-
-                ###
-                #
-                # This section will be for renaming specific event type field names
-                # that are able to be mapped to the Elastic Common Schema (ECS)
-                #
-                ###
-
-                #Specific Alert renaming
-                mutate { 
-                        id => "mutate_rename_suricata_alert_log_type"
-                        rename => { "[suricata][alert][severity]" => "[event][severity]"}
-                }
-
-                #Specific http renaming
-                mutate { 
-                        id => "mutate_rename_suricata_http_log_type"
-                        rename => { "[suricata][http][protocol]" => "[http][version]"}
-                        rename => { "[suricata][http][status]" => "[http][response][status_code]"}
-                }
-
-                #Specific dns renaming
-                mutate { 
-                        id => "mutate_rename_suricata_dns_log_type"
-                        rename => { "[suricata][dns][id]" => "[dns][id]"}
-                        rename => { "[suricata][dns][type]" => "[dns][type]"}
-                        rename => { "[suricata][dns][rcode]" => "[dns][response_code]"}
-                }
-
-                #Specific tls renaming
-                mutate { 
-                        id => "mutate_rename_suricata_tls_log_type"
-                        rename => { "[suricata][tls][version]" => "[tls][version]"}
-                        rename => { "[suricata][tls][ja3s]" => "[tls][server][ja3s]"}
-                        rename => { "[suricata][tls][ja3]" => "[tls][client][ja3]"}
-                }
-
-                if ([tls][client][ja3] == "{}") {
-                        mutate { 
-                                id => "mutate_remove_field_tls_client_ja3_suricata"
-                                remove_field => [ "[tls][client][ja3]" ] 
-                        }
-                }
-
-                if ([tls][server][ja3s] == "{}") {
-                        mutate { 
-                                id => "mutate_remove_field_tls_server_ja33_suricata"
-                                remove_field => [ "[tls][server][ja3s]" ] 
-                        }
-                }
-
-                #Specific fileinfo renaming
-                mutate { 
-                        id => "mutate_rename_suricata_fileinfo_log_type"
-                        rename => { "[suricata][fileinfo][size]" => "[file][size]"}
-                        rename => { "[suricata][fileinfo][sid]" => "[file][uid]"}
-                        rename => { "[suricata][fileinfo][filename]" => "[file][path]"}
-                }
-
-                #This is done in security onion, might be good to add, but not including it yet
-                #Not in common schema, still think it would be helpful, needs to be added to Malcolm
-                # if [event_type] == "alert" {
-                #         if [alert][severity] == 1 {
-                #                 mutate {
-                #                         add_field => { "event.severity_name" => "High" }
-                #                 }
-                #         }
-                #         if [alert][severity] == 2 {
-                #                 mutate {
-                #                         add_field => { "event.severity_name" => "Medium" }
-                #                 }
-                #         }
-                #         if [alert][severity] == 3 {
-                #                 mutate {
-                #                         add_field => { "event.severity_name" => "Low" }
-                #                 }
-                #         }
-                # }
+        #Renaming the global fields of every Suricata event type
+        mutate { id => "mutate_suricata_rename_global_fields"
+                 rename => { "[suricata][app_proto]" => "network.protocol" }
+                 rename => { "[suricata][community_id]" => "network.community_id" }
+                 rename => { "[suricata][dest_ip]" => "destination.ip" }
+                 rename => { "[suricata][dest_port]" => "destination.port" }
+                 rename => { "[suricata][src_ip]" => "source.ip" }
+                 rename => { "[suricata][src_port]" => "source.port" }
         }
-         else {
-                drop { id => "drop_suricata_invalid_logs" }
+
+        ###
+        #
+        # This section will be for renaming specific event type field names
+        # that are able to be mapped to the Elastic Common Schema (ECS)
+        #
+        ###
+
+        #Specific Alert renaming
+        mutate {
+                id => "mutate_rename_suricata_alert_severity"
+                rename => { "[suricata][alert][severity]" => "[event][severity]" }
         }
+
+        #Specific http renaming
+        mutate {
+                id => "mutate_rename_suricata_http"
+                rename => { "[suricata][http][protocol]" => "[http][version]"}
+                rename => { "[suricata][http][status]" => "[http][response][status_code]"}
+        }
+
+        #Specific dns renaming
+        mutate {
+                id => "mutate_rename_suricata_dns"
+                rename => { "[suricata][dns][id]" => "[dns][id]"}
+                rename => { "[suricata][dns][type]" => "[dns][type]"}
+                rename => { "[suricata][dns][rcode]" => "[dns][response_code]"}
+        }
+
+        mutate { id => "mutate_remove_field_suricata_ja3_strings"
+                 remove_field => [ "[suricata][tls][ja3][string]",
+                                   "[suricata][tls][ja3s][string]" ] }
+
+        #Specific tls renaming
+        mutate {
+                 id => "mutate_rename_suricata_tls"
+                 rename => { "[suricata][tls][version]" => "[tls][version]"}
+                 rename => { "[suricata][tls][ja3s][hash]" => "[tls][server][ja3s]"}
+                 rename => { "[suricata][tls][ja3][hash]" => "[tls][client][ja3]"}
+         }
+
+         if ([tls][client][ja3] == "") {
+                 mutate {
+                         id => "mutate_remove_field_tls_client_ja3_suricata"
+                         remove_field => [ "[tls][client][ja3]" ]
+                 }
+         }
+
+         if ([tls][server][ja3s] == "") {
+                 mutate {
+                         id => "mutate_remove_field_tls_server_ja3s_suricata"
+                         remove_field => [ "[tls][server][ja3s]" ]
+                 }
+         }
+
+        #Specific fileinfo renaming
+        mutate {
+                id => "mutate_rename_suricata_fileinfo"
+                rename => { "[suricata][fileinfo][size]" => "[file][size]"}
+                rename => { "[suricata][fileinfo][sid]" => "[file][uid]"}
+                rename => { "[suricata][fileinfo][filename]" => "[file][path]"}
+        }
+
+        #This is done in security onion, might be good to add, but not including it yet
+        #Not in common schema, still think it would be helpful, needs to be added to Malcolm
+        # if [event_type] == "alert" {
+        #         if [alert][severity] == 1 {
+        #                 mutate {
+        #                         add_field => { "event.severity_name" => "High" }
+        #                 }
+        #         }
+        #         if [alert][severity] == 2 {
+        #                 mutate {
+        #                         add_field => { "event.severity_name" => "Medium" }
+        #                 }
+        #         }
+        #         if [alert][severity] == 3 {
+        #                 mutate {
+        #                         add_field => { "event.severity_name" => "Low" }
+        #                 }
+        #         }
+        # }
+
+        if (![event][provider]) { mutate { id => "mutate_add_field_event_provider_suricata"
+                                           add_field => { "[event][provider]" => "suricata" } } }
+
+        # rename suricata event type (eg., alert, dns, etc.) to event.dataset
+        mutate { id => "mutate_rename_zeek_logType"
+                 rename => { "[suricata][event_type]" => "[event][dataset]" } }
+
+    } else {
+        drop { id => "drop_suricata_invalid_logs" }
+    }
 
 }
